@@ -1,16 +1,15 @@
 package com.fiap.fourlanches.order.adapter.driven.data.repositories;
 
-import com.fiap.fourlanches.order.adapter.driven.data.entities.ProductJpaEntity;
 import com.fiap.fourlanches.order.adapter.driven.data.ProductJpaRepository;
+import com.fiap.fourlanches.order.adapter.driven.data.entities.ProductJpaEntity;
+import com.fiap.fourlanches.order.application.exception.ProductNotFoundException;
 import com.fiap.fourlanches.order.domain.entities.Category;
 import com.fiap.fourlanches.order.domain.entities.Product;
-import com.fiap.fourlanches.order.application.exception.ProductNotFoundException;
 import com.fiap.fourlanches.order.domain.repositories.ProductRepository;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Repository
 @AllArgsConstructor
@@ -24,10 +23,11 @@ public class ProductRepositoryImpl implements ProductRepository {
     }
 
     public List<Product> getProducts() {
-        return jpaRepository.findAll().stream().map(ProductJpaEntity::toProduct).collect(Collectors.toList());
+        return jpaRepository.findAll().stream().map(ProductJpaEntity::toProduct).toList();
     }
     public List<Product> getProductsByCategory(Category category) {
-        return jpaRepository.findByCategory(category.toString()).stream().map(ProductJpaEntity::toProduct).collect(Collectors.toList());
+        return jpaRepository.findByCategory(category.toString())
+                .stream().map(ProductJpaEntity::toProduct).toList();
     }
 
     public void deleteProduct(Long id) {
@@ -39,9 +39,8 @@ public class ProductRepositoryImpl implements ProductRepository {
     }
 
     @Override
-    public Long create(Product product) {
-        ProductJpaEntity productJpaEntity = jpaRepository.save(ProductJpaEntity.fromProduct(product));
-        return productJpaEntity.getId();
+    public Long createProduct(Product product) {
+        return jpaRepository.save(ProductJpaEntity.fromProduct(product)).getId();
     }
 
 
